feat: engine resource REST endpoints + shared pixel runner helper (#335)
Add per-engine-type REST endpoints (database, model, storage, vector,
function) that wrap the corresponding pixel reactor calls. Each endpoint
accepts JSON or form-urlencoded payloads and dispatches through a new
ResourceUtility.runPixel helper.

New endpoints
- POST /api/database-{id}/{reload,query}, GET /api/database-{id}/{type,profile}
  (type returns IDatabaseEngine.DATABASE_TYPE + ENGINESUBTYPE)
- POST /api/model-{id}/{llm,embeddings,vision}
- POST /api/model-{id}/llmStreaming - SSE stream of raw chunks pulled from
  PixelJobManager.jobStreamMap, no OpenAI-format translation
- POST /api/storage-{id}/{list,listDetails,delete}
- POST /api/vector-{id}/{query,listDocuments,removeDocument}
- POST /api/function-{id}/execute, GET /api/function-{id}/definition
- GET /api/e-{id}/type - returns IEngine.CATALOG_TYPE for any engine

ResourceUtility.runPixel
- Returns HTTP 400 when the PixelRunner result carries
  PixelOperationType.ERROR or INVALID_SYNTAX, instead of the standard
  always-200 SEMOSS pixel envelope.
- Drops the per-request Insight (and clears the PixelJobManager job)
  via the new 3-arg PixelStreamUtility.collectPixelData(...,afterWrite)
  hook, so cleanup runs only after the response body finishes streaming.
- New parseRequestBody helper accepts both content types in one call.

EngineRouteResource
- Add public-static GSON, appendIfPresent, and error helpers shared
  across the engine-resource classes.
- Replace Constants.STACKTRACE log calls with descriptive {} messages
  that name the failed operation and engine id.
- Add Javadoc for updateSmssFile, imageDownload, and the auth helper.

WebUtility
- Move getClientIp here from ResourceUtility; update CACFilter,
  PIVFilter, SSOFilter, TrustedTokenFilter, TrustedTokenService, and
  UserResource accordingly.
- Replace remaining Constants.STACKTRACE calls with descriptive
  parameterized log messages.
- Fill in Javadoc on previously empty